<resources>
    <string name="app_name">Little Player</string>

    <string name="delete">Delete</string>
    <string name="zero_zero">0:00</string>
    <string name="song_title">Song Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="zero_mb">0 MB</string>
    <string name="zero_db">0dB</string>
    <string name="night_mode">Night Mode</string>
    <string name="next_song">Next Song</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="folders">Folders</string>
    <string name="_12_songs_storage_emulated_0_music_songs">12 songs | /storage/emulated/0/Music/Songs/</string>
    <string name="song_details_format">%1$s | %2$s</string>
    <string name="favorite">Favorite</string>
    <string name="cycle">Cycle</string>
    <string name="favourites">Favourites</string>
    <string name="playlists">Playlists</string>
    <string name="recent">Recent</string>
    <string name="search">Search…</string>
    <string name="sort_songs">Sort songs</string>
    <string name="sort_albums">Sort albums</string>
    <string name="sort_artists">Sort artists</string>
    <string name="sort_folders">Sort folders</string>
    <string name="sort_playlists">Sort playlists</string>
    <string name="by_adding_time">By adding time</string>
    <string name="by_name">By name</string>
    <string name="by_song_count">By song count</string>
    <string name="by_play_count">By the number of time played</string>
    <string name="by_release_date">By release date</string>
    <string name="by_size">By size</string>
    <string name="shuffle_playback">Shuffle playback</string>
    <string name="no_items_found">No Items Found</string>
    <string name="settings">Settings</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="share">Share</string>
    <string name="song_options">Song Options</string>
    <string name="equalizer">Equalizer</string>
    <string name="rescan_media">Rescan Media</string>
    <string name="select_playlist">Select Playlist</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="new_playlist">New Playlist</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="create">Create</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="playlist">Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="delete_playlist_message">Are you sure you want to delete \"%1$s\"?</string>
    <string name="rename_playlist">Rename Playlist</string>
    <string name="audio_quality">Audio Quality</string>
    <string name="notifications">Notifications</string>
    <string name="data_storage">Data &amp; Storage</string>
    <string name="privacy">Privacy</string>
    <string name="about">About</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="off">Off</string>
    <string name="set_sleep_timer">Set Sleep Timer</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="_60_minutes">60 minutes</string>
    <string name="timer_set_format">Timer set for %1$d minutes</string>
    <string name="music_service_not_connected">Music Service not connected yet</string>
    <string name="library_rescan_started">Library Rescan Started</string>
    <string name="custom">Custom</string>
    <string name="pop">Pop</string>
    <string name="rock">Rock</string>
    <string name="jazz">Jazz</string>
    <string name="classical">Classical</string>
    <string name="bass">Bass</string>
    <string name="virtualizer">Virtualizer</string>
    <string name="dance">Dance</string>
    <string name="flat">Flat</string>
    <string name="manual_adjustment">Manual adjustment</string>
    <string name="enhance_sounds">Enhance sounds</string>
    <string name="db_format">%1$s%2$ddB</string>
    <string name="bottom_player_theme_title">Bottom Player Theme</string>
    <string name="bottom_player_theme_desc">Enable theme coloring for the bottom player controls.</string>
    <string name="list_theme_title">List Item Theme</string>
    <string name="list_theme_desc">Enable theme coloring for music list items.</string>
    <string name="marquee_scrolling">Marquee Scrolling</string>
    <string name="marquee_scrolling_desc">Enable scrolling text for long song titles in players.</string>
    <string name="basic">Basic</string>
    <string name="palette">Palette</string>
    <string name="white">White</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_content">Your privacy is important to us. Little Player does not collect any personal data. We only access your device storage to find and play your music files. No data is shared with third parties.</string>
    <string name="about_app_content">Little Player is a modern, lightweight music player designed for the best audio experience.</string>
    <string name="origin_syria">Origin: Syria</string>
    <string name="developer_selim_dawa">Developer: Selim Dawa</string>
    <string name="github_label">GitHub:&#160;</string>
    <string name="github_url">https://github.com/selimdawa</string>
    <string name="crafted_with_passion">Crafted with passion for music lovers.</string>
    <string name="version_format">Version %1$s</string>
    <string name="ok">OK</string>
    <string name="stop">Stop</string>
    <string name="cache_and_history">Cache &amp; History</string>
    <string name="clear_art_cache">Clear Art Cache</string>
    <string name="clear_recent_history">Clear Recent History</string>
    <string name="clear_recent_history_desc">Deletes the list of your most recently played songs.</string>
    <string name="art_cache_cleared">Album art cache cleared</string>
    <string name="history_cleared">Recent history cleared</string>
    <string name="blinding_lights">Blinding Lights</string>
    <string name="the_weeknd">The Weeknd</string>
    <string name="show_song_toast">Show Song Toast</string>
    <string name="show_song_toast_desc">Show a popup message with song title when a new song starts.</string>
    <string name="system_notification_settings">System Notification Settings</string>
    <string name="system_notification_settings_desc">Manage app notifications in Android settings.</string>
    <string name="remove_from_playlist">Remove from Playlist</string>
    <string name="remove_from_recent">Remove from Recent</string>
    <string name="remove_song_from_playlist_message">Are you sure you want to remove \"%1$s\" from this playlist?</string>
    <string name="clear_recent_message">Are you sure you want to clear your listening history?</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="playlist_details_format">Playlist / %1$s</string>
    <plurals name="songs_count">
        <item quantity="one">%1$d Song</item>
        <item quantity="other">%1$d Songs</item>
    </plurals>
    <string name="folder_details_format">%1$s | %2$s</string>
    <string name="more_options">More Options</string>
    <string name="hide_folder">Hide Folder</string>
    <string name="hidden_folders">Hidden Folders</string>
    <string name="hide_folder_message">Are you sure you want to hide this folder? Its contents will be removed from your library.</string>
    <string name="unhide">Unhide</string>
    <string name="no_hidden_folders">No hidden folders</string>
    <string name="language">Language</string>
    <string name="system_default">System Default</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="arabic">Arabic</string>
    <string name="playback_channel_name">Music Playback</string>
    <string name="playback_channel_desc">Ongoing music playback notification</string>
    <string name="enter_valid_minutes">Enter valid minutes</string>
    <string name="enter_minutes">Enter minutes</string>
    <string name="share_song">Share Song</string>
    <string name="add_widget_to_home">Home Widget</string>
    <string name="widget_tiny">Tiny (2x1)</string>
    <string name="widget_square">Square (2x2)</string>
    <string name="widget_compact">Compact (4x1)</string>
    <string name="widget_modern">Modern (4x2)</string>
    <string name="widget_large">Large (4x4)</string>
    <string name="refresh_widgets">Refresh Widgets</string>
    <string name="widgets_refreshed">Widgets updated successfully</string>
    <string name="widget_pinning_not_supported">Widget pinning is not supported on this device.</string>
    <string name="widget_added_success">Widget added! Check your home screen.</string>
    <string name="widget_already_exists">Widget already exists on your home screen.</string>

    <string name="headset_controls">Headset Controls</string>
    <string name="headset_controls_desc">Customize headset button actions.</string>
    <string name="double_click_action">Double Click Action</string>
    <string name="triple_click_action">Triple Click Action</string>
    <string name="none">None</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="rewind">Rewind</string>
    <string name="toggle_favorite">Toggle Favorite</string>

    <string name="unknown">Unknown</string>
    <string name="media_route_menu_title">Cast</string>
    <string name="playback_settings">Playback Settings</string>
    <string name="speed">Speed</string>
    <string name="pitch">Pitch</string>
    <string name="reset">Reset</string>

    <string name="edit_tags">Edit Info</string>
    <string name="tag_editor">Edit Info</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="save">Save</string>
    <string name="edit_cover">Edit Cover</string>
    <string name="error_loading_tags">Error loading tags</string>
    <string name="error_saving_tags">Error saving tags</string>
    <string name="tags_saved_successfully">Tags saved successfully</string>
    <string name="kbps_format">%1$s kbps</string>
    <string name="kbps_placeholder">320 kbps</string>
    <string name="one_x">1.0x</string>
    <string name="reset_palette_colors">Reset Palette Colors</string>
    <string name="reset_palette_colors_desc">Re-extract colors for all songs in your library.</string>
    <string name="palette_colors_reset">Palette colors are being re-extracted in the background</string>
    <string name="loading_data">تحميل البيانات...</string>
</resources>