<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_10"
    android:background="@drawable/dialog_card_background"
    android:orientation="vertical"
    android:padding="@dimen/spacing_20">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/spacing_medium"
        android:text="@string/song_options"
        android:textColor="?attr/colorError"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/optionSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/spacing_12">

        <ImageView
            android:layout_width="@dimen/spacing_24"
            android:layout_height="@dimen/spacing_24"
            android:contentDescription="@null"
            android:src="@drawable/ic_recent"
            app:tint="?attr/mc_track" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_12"
            android:text="@string/speed"
            android:textColor="?attr/colorError"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionSleep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/spacing_12">

        <ImageView
            android:layout_width="@dimen/spacing_30"
            android:layout_height="@dimen/spacing_30"
            android:layout_marginStart="-4dp"
            android:contentDescription="@null"
            android:src="@drawable/song_timer"
            app:tint="?attr/mc_track" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_12"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep_timer"
                android:textColor="?attr/colorError"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/tvSleepTimerStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/spacing_12">

        <ImageView
            android:layout_width="@dimen/spacing_24"
            android:layout_height="@dimen/spacing_24"
            android:contentDescription="@null"
            android:src="@drawable/media3_icon_share"
            app:tint="?attr/mc_track" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_12"
            android:text="@string/share"
            android:textColor="?attr/colorError"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionCast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/spacing_12">

        <androidx.mediarouter.app.MediaRouteButton
            android:id="@+id/dialog_media_route_button"
            android:layout_width="@dimen/spacing_24"
            android:layout_height="@dimen/spacing_24"
            app:mediaRouteButtonTint="?attr/mc_track" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_12"
            android:text="@string/media_route_menu_title"
            android:textColor="?attr/colorError"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/spacing_12">

        <ImageView
            android:layout_width="@dimen/spacing_24"
            android:layout_height="@dimen/spacing_24"
            android:contentDescription="@null"
            android:src="@drawable/ic_edit"
            app:tint="?attr/mc_track" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_12"
            android:text="@string/edit_tags"
            android:textColor="?attr/colorError"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>

</LinearLayout>